Modify local search generation